--- a/src/Components/Schedule/Schedule.scss
+++ b/src/Components/Schedule/Schedule.scss
@@ -64,6 +64,15 @@
         box-sizing: border-box;
         background: rgba(255, 255, 255, 0);
 
+        & > span {
+          font-family: 'Gilroy';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 34px;
+          line-height: 60px;
+          color: #ffffff;
+        }
+
         &:hover {
           background: rgba(255, 255, 255, 0.3);
         }
@@ -76,15 +85,6 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
           }
-        }
-
-        & > span {
-          font-family: 'Gilroy';
-          font-style: normal;
-          font-weight: 700;
-          font-size: 34px;
-          line-height: 60px;
-          color: #ffffff;
         }
       }
     }
@@ -170,6 +170,19 @@
       top: 571px;
       background: #ffffff;
     }
+  }
+}
+
+.active {
+  background: #ffffff;
+  &:hover {
+    background: #ffffff;
+  }
+  span {
+    background: linear-gradient(103.55deg, #b487f5 0%, #6e8cf5 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
   }
 }
 
@@ -281,7 +294,7 @@
 
     &_phone {
       width: 280px;
-      height: 460px;
+      height: 478px;
       top: 40px;
       background: url(../../img/phone-small.png);
       background-repeat: no-repeat;
@@ -347,14 +360,14 @@
     }
 
     &_phone {
-      height: 445px;
       margin-left: 0;
       margin-right: 0;
-      top: -15px;
+      top: 5px;
     }
 
     &_frame {
-      top: -15px;
+      top: -35px;
+      z-index: 1;
     }
   }
 }
